Made filter work in table